Add nstallation script for virtual hosting using apache on ubuntu
Signed-off-by: kunalvirwal <kunalvirwal@gmail.com>

--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,5 @@
 SECRET_KEY=""
-PORT=":8000"
+PORT=":8000" #make change in /etc/apache2/sites-available/mvc.sdslabs.local.conf
 DB_HOST="localhost:3306"
 DB_USER=""
 DB_PASSWORD=""
